fix bg on tablets | Case studies

--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -7,6 +7,8 @@ html, body
     min-height: calc(100vh - 273px)
     background-color: $color-bg-dark
     padding-top: 125px
+    +max-screen($breakpoint-lg)
+        padding-top: 0
     +max-screen($breakpoint-sm)
 
 #app-wrapper
