--- a/sass/parts/caseStudies/_solution.sass
+++ b/sass/parts/caseStudies/_solution.sass
@@ -17,7 +17,8 @@
         +max-screen(1200px)
 
         +max-screen($breakpoint-lg)
-
+            background-image: url('../assets/images/solutions/Dark_gradient_bg__tablet.jpg')
+            bottom: -3720px
         +max-screen($breakpoint-md)
 
         +max-screen($breakpoint-sm)
